// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`does not render the Slide 1`] = `
<div
  style={
    Object {
      "display": "inline-block",
      "height": "100%",
      "opacity": 0,
      "textAlign": "center",
      "transition": "max-width 1000ms ease-in-out",
      "width": "100%",
    }
  }
/>
`;

exports[`renders the Slide horizontally 1`] = `
<div
  style={
    Object {
      "display": "inline-block",
      "height": "100%",
      "maxWidth": "120px",
      "opacity": 1,
      "textAlign": "center",
      "transition": "max-width 1000ms ease-in-out",
      "width": "100%",
    }
  }
>
  <div
    style={
      Object {
        "backgroundColor": "#EFEFEF",
      }
    }
  >
    Hello world !
  </div>
</div>
`;

exports[`renders the Slide vertically 1`] = `
<div
  style={
    Object {
      "display": "block",
      "height": "100%",
      "maxHeight": "50px",
      "opacity": 1,
      "textAlign": "center",
      "transition": "max-height 1000ms ease-in-out",
    }
  }
>
  <div
    style={
      Object {
        "backgroundColor": "#EFEFEF",
      }
    }
  >
    Hello world !
  </div>
</div>
`;
